fixed mobile spacing

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -183,6 +183,7 @@ a:visited {
 
 
         justify-content: center;
+        margin-right: 10px;
 
 
     }
